# gitgate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-entrypoint.sh  gitgate-policy.yaml  policy.yaml.example
.github/workflows/: codeql.yml
src/: audit.rs  github.rs  lib.rs  main.rs  policy.rs
