[package]
name = "gitgate"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gitgate"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
