[package]
name = "gitgate"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gitgate"
path = "src/main.rs"

[[bin]]
name = "gitgate-proxy"
path = "src/bin/proxy.rs"

[[bin]]
name = "gitgate-cert"
path = "src/bin/cert.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "1", features = ["http1"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
tower = { version = "0.4", features = ["util"] }
rcgen = "0.13"
uuid = { version = "1", features = ["v4"] }
rustls = "0.21"
rustls-pemfile = "1"
tokio-rustls = "0.24"
